--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WyB4E6OhQvtrZ8dX3DxapA
+# Checksum: DBCl4zldBxOp8mXId0fnRA
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -297,10 +297,10 @@
 .asianewsnet.net/banner/
 .askjolene.com/endroll.php?
 .asp?coad
+.assetize.com/
 .assoc-amazon.
 .assoc-amazon.co.uk/
 .astrolabio.
-.assetize.com/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
@@ -449,6 +449,7 @@
 .com/ad/
 .com/ad2/
 .com/ad_
+.com/adds/
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -458,7 +459,6 @@
 .com/ads/
 .com/ads?
 .com/ads_
-.com/adds/
 .com/adsense/
 .com/adshow
 .com/adstream_
@@ -1009,10 +1009,10 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
-.pornturbo.com/tmarket.
 .pornoprinzen.com/banners_
 .pornprosnetwork.com/affiliates/
 .porntrack.com/
+.pornturbo.com/tmarket.
 .ppc-direct.
 .precisionclick.
 .predictad.
@@ -1569,8 +1569,8 @@
 /AdBlock.ashx?
 /adblock_
 /adbrite-
-/adbrite2.
 /adbrite/
+/adbrite2.
 /adbrite_
 /adCampaigns/
 /adcast_
@@ -1797,11 +1797,11 @@
 /adStreamJSController.
 /adstubs/
 /adSwap.js
+/adSwap/
 /adsWrapper.js
 /adsx/www/
 /adsystem.
 /adsystem/
-/adSwap/
 /ads~adsize~
 /adtag.gif
 /adtag.htm?
@@ -3010,8 +3010,8 @@ _iframe_ad_
 _leftx280_
 _minibanner
 _org_ad.
-_popovers_
 _platform_ads_
+_popovers_
 _reporting_ads.
 _right_ad.
 _rmadv.
