--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -246,6 +246,7 @@
 .extreme-dm.
 .facebook.com/ap.php?i=
 .facebook.com/impression.php?
+.facebook.com/js/conversions/tracking.js
 .fc2.com/analyze.js
 .fetchback.com/
 .flagcounter.com/count/
