--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DBCl4zldBxOp8mXId0fnRA
+# Checksum: 8KvnEZcW8W4PylDKJmY9Ng
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -297,10 +297,10 @@
 .asianewsnet.net/banner/
 .askjolene.com/endroll.php?
 .asp?coad
-.assetize.com/
 .assoc-amazon.
 .assoc-amazon.co.uk/
 .astrolabio.
+.assetize.com/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
@@ -449,7 +449,6 @@
 .com/ad/
 .com/ad2/
 .com/ad_
-.com/adds/
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -459,6 +458,7 @@
 .com/ads/
 .com/ads?
 .com/ads_
+.com/adds/
 .com/adsense/
 .com/adshow
 .com/adstream_
@@ -1009,10 +1009,10 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
+.pornturbo.com/tmarket.
 .pornoprinzen.com/banners_
 .pornprosnetwork.com/affiliates/
 .porntrack.com/
-.pornturbo.com/tmarket.
 .ppc-direct.
 .precisionclick.
 .predictad.
@@ -1569,8 +1569,8 @@
 /AdBlock.ashx?
 /adblock_
 /adbrite-
-/adbrite/
 /adbrite2.
+/adbrite/
 /adbrite_
 /adCampaigns/
 /adcast_
@@ -1797,11 +1797,11 @@
 /adStreamJSController.
 /adstubs/
 /adSwap.js
-/adSwap/
 /adsWrapper.js
 /adsx/www/
 /adsystem.
 /adsystem/
+/adSwap/
 /ads~adsize~
 /adtag.gif
 /adtag.htm?
@@ -3010,8 +3010,8 @@ _iframe_ad_
 _leftx280_
 _minibanner
 _org_ad.
-_platform_ads_
 _popovers_
+_platform_ads_
 _reporting_ads.
 _right_ad.
 _rmadv.
@@ -3329,6 +3329,7 @@ http://banner-clix.com/
 http://banner.atomicgamer.com/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
+http://banner.itweb.co.za/
 http://banner1.
 http://banners.adultfriendfinder.
 http://banners.adventory.com/
@@ -3482,6 +3483,7 @@ http://img.pulsemgr.com/pm/?
 http://img.pulsemgr.com/script/
 http://img.tradepub.com/images/
 http://inheart.ru/welove/
+http://itweb.co.za/banners/
 http://iv.doubleclick.net/adj/
 http://ivitrine.buscape.com/
 http://jbrlsr.com/
@@ -3719,6 +3721,7 @@ http://www.gov-auctions.org/images/banner/banner
 http://www.greattastenopain.com/aff/
 http://www.hardsextube.com/preroll/
 http://www.ibatom.com/
+http://www.itweb.co.za/banners/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
 http://www.macintouch.com/images/amaz_
