--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8KvnEZcW8W4PylDKJmY9Ng
+# Checksum: dzwuBaFqc1XKNCa+DjWVng
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2237,6 +2237,7 @@
 /inline_ad.
 /InlineTextAds?
 /insertAds.
+/intellitext.
 /iplgadshow
 /j/ads.js
 /javascript/ads.
