--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: dzwuBaFqc1XKNCa+DjWVng
+# Checksum: /mZ6ly1pKX63SC8Zg1hMhw
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3015,6 +3015,7 @@ _popovers_
 _platform_ads_
 _reporting_ads.
 _right_ad.
+_rightad1.
 _rmadv.
 _site_sponsor
 _text_ads.
