--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /mZ6ly1pKX63SC8Zg1hMhw
+# Checksum: ykK57LpcgHSSeV/ztelxZg
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1535,6 +1535,7 @@
 /ad_label
 /ad_leader.
 /ad_leader_
+/ad_legend_
 /ad_leaderboard
 /ad_left_
 /ad_links/
