--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ykK57LpcgHSSeV/ztelxZg
+# Checksum: jiBln+JkUh8odwXu9ljh8w
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1737,6 +1737,7 @@
 /ads?id
 /ads?spaceid
 /ads_bg.
+/ads_google.
 /ads_iframe.
 /ads_php/
 /ads_view.
