--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jiBln+JkUh8odwXu9ljh8w
+# Checksum: jEm9fgWZ6aqDgQMN/TnaWw
 # Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -189,6 +189,7 @@
 .adroll.com/
 .adru.net/
 .ads.darla.
+.ads.hexus.net/
 .ads.kelbymediagroup.com/
 .ads.netlog.com/
 .ads.pof.com/
