--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -458,6 +458,8 @@
 .php?refcode=
 .picapp.com/empty.gif?
 .pl/stats.js
+.play.com/analytics/
+.play.com/sitetrak/
 .plentyoffish.com/tracking.
 .pointomatic.
 .popsample.
@@ -1652,3 +1654,98 @@ http://tracker.wordstream.com/
 http://tracker01.
 http://tracker2.apollo-mail.net/
 http://trackfeed.com/
+http://trackmon.
+http://tracknet.
+http://tracksy.com/
+http://traffic.
+http://traffic.index.
+http://trax.tvguide.com/
+http://triad.
+http://trk.enecto.
+http://trk.newtention.
+http://tsk5.com/
+http://twitter.com/scribe?log
+http://twittercounter.com/embed/?
+http://up.
+http://up.
+http://urchin-
+http://ustats.
+http://utm.
+http://uv.terra.com.br/
+http://vclick.adbrite.com/
+http://video-stats.
+http://view.atdmt.com/action/
+http://visitorinspector.com/a/
+http://visitors.
+http://visitors.sourcingmap.com/
+http://vizisense.net/
+http://vmp.boldchat.com/
+http://wa.ui-portal.de/
+http://warp.prnewswire.co.uk/
+http://watson.live.
+http://web-controlling.org/
+http://web.survey-poll.
+http://webcount.
+http://webeffective.keynote.
+http://webstats.
+http://webtraffic.ttinet.com/
+http://whos.amung.us/serving/
+http://whos.amung.us/serving/
+http://widget.quantcast.com/
+http://widgets.alexa.com/traffic/
+http://www.betway.com/at?
+http://www.burstnet.com/
+http://www.digimedia.com/pageviews.php?
+http://www.eperfectdata.com/
+http://www.lederer.nl/incl/stats.js.php?
+http://www.persianstat.ir/
+http://www.reporter-times.com/js/tk.js?
+http://www.zanox-affiliate.de/
+http://x.weather.com/wow/
+http://x6.
+http://zirve100.com/Counter
+https://analytics.
+https://counter.
+https://reporting.singlefeed.com/
+https://ssl-stats.wordpress.com/
+https://vms.boldchat.com/aid/
+https://webstats.
+hypercount.com
+i.kissmetrics.com/
+intensedebate.com/remoteVisit.php?
+myreferer.com
+OmnitureTracking.js
+pageTracker._
+PageTracking.js
+pclick.europe.yahoo.com
+pclick.internal.yahoo.com
+precisioncounter
+revenuepilot.com
+revenuescience.
+SEOTracking.
+sitebanners
+size=1x1&
+size=1x1;
+spywords.com/
+stat-counter
+stathound.com/
+statistiq.com
+stats.wordpress.com/
+stats_tracker.
+statsmachine.com
+surehits.com/
+surveycode.js
+surveyscout.com
+topstat.com/
+tracker_pixel.
+tracking_beacon
+Tracking_test.
+TrackingCode-
+trans_1x1.gif
+true-counter
+urltrak.com/
+WebAnalytics.js
+webstat.net
+webstatisztika
+webtraffiq.
+wholinked.com
