--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jEm9fgWZ6aqDgQMN/TnaWw
-# Updated: 10 Sep 2010
+# Checksum: JyHrPrnVYcHkNC8E9nvD1Q
+# Updated: 11 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -475,6 +475,7 @@
 .com/fullad
 .com/gads/
 .com/hserver/
+.com/interstitial.
 .com/js.ng/
 .com/miads/
 .com/openx/
