--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JyHrPrnVYcHkNC8E9nvD1Q
+# Checksum: 602v73QK6xS/PYKMJLz9rg
 # Updated: 11 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -711,7 +711,6 @@
 .imagesatlantic.
 .imageshack.us/ym.php?
 .imagevenue.com/banner
-.imagevenue.com/interstitial.
 .imagevenue.com/streamate
 .imedia.co.il/
 .img-vidiklub.com/demo.js
