--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 602v73QK6xS/PYKMJLz9rg
-# Updated: 11 Sep 2010
+# Checksum: oHzwYxNsqJj8HRIjIw22rg
+# Updated: 12 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3693,6 +3693,7 @@ http://trafficcdn.liveuniversenetwork.com/
 http://ts.richmedia.yahoo.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
+http://uk.ebayobjects.com/
 http://unicast.ign.com/assets/
 http://uploads.forumwarz.com/
 http://vadpay.com/banner?
