optimise adult filters

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oHzwYxNsqJj8HRIjIw22rg
+# Checksum: SlxyJMsC9ECJ3KgBT9rYrA
 # Updated: 12 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -568,7 +568,6 @@
 .emediate.eu/
 .emediate.se/
 .emptyspaceads.com/
-.end-finder.com/
 .eporner.com/ads-
 .ero-advertising.com
 .erosadv.com/
@@ -3070,8 +3069,6 @@ cubics.com
 d468x60-
 dbbsrv.com/
 dhtmlpop
-enormousdating.com/iframe
-epiccams.com/exports/tour
 facebook.com/beacon/
 forex-affiliate.
 fuck-access.com/
