--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -104,6 +104,7 @@ _publicidade_
 .probabilidades.net/
 .pt/images/banners/
 .publipagos.com/
+.publicidade.
 .rankia.com/promo
 .record.xl.pt/pub/
 .record.xl.pt/rec/i/pub
