--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -75,6 +75,7 @@ _publicidade_
 .jmonline.com.br/uploads/banners/
 .jmonline.com.br/novo/banner_
 .jogolandia.com.br/banners/
+.jornaldigital.com/pub/
 .keyade.com/
 .laregion.es/imagenes/banners/
 .lavanguardia.es/flash/
