--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -66,6 +66,8 @@ _publicidade_
 .gazetaesportiva.net/js/banners/
 .globalasia.es/images/banners/
 .guiadasemana.com.br/images/tit_pub_
+.guiadasemana.com.br/buscape.
+.guiadasemana.com.br/dove/banner.
 .hotwords.com.br/
 .hotwords.com.mx/
 .ieurop.net/
