--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SlxyJMsC9ECJ3KgBT9rYrA
+# Checksum: OGNxPTCScAmrffZ4ZmgVTg
 # Updated: 12 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1267,6 +1267,7 @@
 .wildamaginations.com/mdm/
 .worldmag.com/images/media/
 .worldsex.com/c/
+.wemfbox.ch/
 .ws/banners/
 .wsex.com/mediaserver/
 .x-adservice.com/
