--- a/easylistfanboy/iron/adblock-vtn.ini
+++ b/easylistfanboy/iron/adblock-vtn.ini
@@ -1,5 +1,6 @@
 # Vietnamese (Iron-Chrome)
 .24h.com.vn/js/24h.js
+.24h.com.vn/upload/background/
 .admicro.vn/
 .adnet.vn/
 .anh.24h.com.vn/upload/qcao/
