--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: OGNxPTCScAmrffZ4ZmgVTg
+# Checksum: +0cReZV8JFK8IZQr+ColqQ
 # Updated: 12 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -459,6 +459,7 @@
 .com/ads/
 .com/ads?
 .com/ads_
+.com/adx/
 .com/adds/
 .com/adsense/
 .com/adshow
