--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,8 +1,8 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +0cReZV8JFK8IZQr+ColqQ
+# Checksum: Z5J3ErF+eNinDWEGqVJfDQ
 # Updated: 12 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
-# Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
+# Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
 &Advert_Id=
 ,160x600;
