--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z5J3ErF+eNinDWEGqVJfDQ
-# Updated: 12 Sep 2010
+# Checksum: WREkpzxosyfECCi5XfLZcw
+# Updated: 13 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2160,6 +2160,7 @@
 /hikaku/banner/
 /hk.yimg.com/a/
 /house-ad/
+/housead/
 /housead_
 /houseads.js
 /houseads.pl?
