--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -18,6 +18,7 @@
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
 .inneram.com/images/banners/
+.lankasrinew.com/clients/
 .mbajunction.com/mba/ads/
 .mpression.net/
 .net-filter.com/
