--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WREkpzxosyfECCi5XfLZcw
-# Updated: 13 Sep 2010
+# Checksum: Xl4xDOOobUXQGsWqy7t/1A
+# Updated: 14 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3759,6 +3759,7 @@ http://xxxvipporno.com/xxxvip.gif
 http://yanks-hosted.com/
 http://yieldbuild.com/
 http://ytmnd.com/ugh
+http://yfrog.com/images/contests/
 http://yx0banners.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
