--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -401,6 +401,7 @@
 .mookie1.com/
 .mpora.com/tv/player/stats/
 .mpwe.net/
+.msn.co.in/c.gif?
 .msn.com/ro.aspx?
 .mtv.com/sitewide/droplets/
 .mvilivestats.com/
