--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Xl4xDOOobUXQGsWqy7t/1A
+# Checksum: FZzgnlgBEgqPxgqntH+dIg
 # Updated: 14 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1466,6 +1466,7 @@
 /ad-html
 /ad-iframe-
 /ad-indicator
+/ad-identifier.
 /ad-inject/
 /ad-layer
 /ad-leaderboard
