--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: FZzgnlgBEgqPxgqntH+dIg
-# Updated: 14 Sep 2010
+# Checksum: LAEnNjBmv2hLN0j2IMbbSg
+# Updated: 15 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1938,7 +1938,6 @@
 /banners/ad
 /banners/aff.
 /banners/affil
-/banners/banner
 /banners/custom-300-
 /banners/ffadult/
 /banners/publica
