--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LAEnNjBmv2hLN0j2IMbbSg
+# Checksum: 1+Q9uhA0344ovNC9fMJnBQ
 # Updated: 15 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -512,6 +512,7 @@
 .crocoads.com/
 .crowdgravity.com/
 .cybermonitor.
+.cybergamer.com.au/xml/sponsors.
 .dailymotion.com/masscast/
 .datepersonalsfree.com/images/banner
 .dating-adv.com/
