--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 1+Q9uhA0344ovNC9fMJnBQ
+# Checksum: pNO8EpNZjTQ0FXufrpSxwg
 # Updated: 15 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3502,6 +3502,7 @@ http://kenny-glenn.net/images/longbanner_
 http://kermit.macnn.com/?DC
 http://kinopokaz.org/
 http://kliklink.ru/get.js?user_id=
+http://kraken.giantrealm.com/
 http://l.keewurd.com/
 http://l.yimg.com/a/i/mntl/sho/
 http://l.yimg.com/ao/i/ad/
