--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pNO8EpNZjTQ0FXufrpSxwg
-# Updated: 15 Sep 2010
+# Checksum: N7MQAcUQWsqQfP9waQM/OA
+# Updated: 16 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1779,6 +1779,7 @@
 /adshow/
 /AdsInclude.
 /adsjs.aspx?
+/adsBannerJS.
 /adslug-
 /adslug_
 /adsmanagement/
@@ -1800,6 +1801,7 @@
 /AdsTemplate/
 /adstop.
 /adstorage.
+/adsWideJS.
 /adStreamJSController.
 /adstubs/
 /adSwap.js
