--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: N7MQAcUQWsqQfP9waQM/OA
+# Checksum: j6rR14tXlpYp5OA5smkhrQ
 # Updated: 16 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -64,6 +64,8 @@
 -adhelper.
 -adsonar.
 -affiliates/img_
+-advertisment-bottom.
+-advertisment-top.
 -banner-ad
 -banner.swf?
 -fleshlight
