--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: j6rR14tXlpYp5OA5smkhrQ
+# Checksum: Qi1YQCQVhqjK7oxnn3sY2w
 # Updated: 16 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1963,6 +1963,7 @@
 /bigtopl.swf
 /bilder/anzeige
 /bilder/promo
+/bg_ads_
 /bizbannerre
 /blog/ads/
 /blogad.
