--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -309,11 +309,12 @@
 .hotlog.ru/
 .hotrank.com.
 .humanclick.com/hc/
-.hwpub.com/
 .hurra.com/
+.hwpub.com/
 .i365.com/pv.aspx?
 .ibpxl.com/
 .ic-live.com/
+.icopyright.net/publisher/js/pageview.js
 .iesnare.com/
 .iivt.com/
 .ilogbox.com/
