--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Qi1YQCQVhqjK7oxnn3sY2w
+# Checksum: zmboGbk5bDvxtI8NfCLs/w
 # Updated: 16 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2140,7 +2140,6 @@
 /getVdopiaAds.
 /gfx/ads/
 /GgAdsense.
-/global_images/sponsors/
 /google-ad?
 /google-ads/
 /google-adsense
