--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -466,6 +466,7 @@
 .plentyoffish.com/tracking.
 .pointomatic.
 .popsample.
+.popeater.com/traffic/
 .postrelease.com/
 .ppctracking.
 .predicta.com.br/
