--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zmboGbk5bDvxtI8NfCLs/w
-# Updated: 16 Sep 2010
+# Checksum: 23zlxvDkKGWb8tNkViWmqQ
+# Updated: 17 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -337,6 +337,7 @@
 .begun.ru/
 .belboon.de/
 .bestofferdirect.
+.besthitsnow.com/
 .bet365affiliates.
 .betclick.com/pub.aspx?
 .bfast.com/
@@ -508,9 +509,11 @@
 .cpuim.com/
 .cpx24.com/
 .cpxinteractive.
+.cpulaptop.com/
 .crakmedia.com/sponsors/
 .crakmedia.com/www/
 .crispads.
+.cruiseworldinc.com/
 .crocoads.com/
 .crowdgravity.com/
 .cybermonitor.
@@ -871,6 +874,7 @@
 .mirando.de/
 .mirror.co.uk/collections/gutters/
 .miva.com/
+.mibebu.com/
 .mixpo.com/
 .mixpod.com/ad/
 .mkhoj.com/
