--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -569,6 +569,8 @@
 .stattrax.
 .steelhousemedia.com/
 .stormiq.com/
+.statun.com/
+.statuncore.com/
 .sunios.de/c.php?
 .superstats.
 .swfstats.com/
