--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 23zlxvDkKGWb8tNkViWmqQ
-# Updated: 17 Sep 2010
+# Checksum: XjhNS7EkMDsmQR94UrZbrA
+# Updated: 16 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -63,9 +63,9 @@
 -ad_injector/
 -adhelper.
 -adsonar.
--affiliates/img_
 -advertisment-bottom.
 -advertisment-top.
+-affiliates/img_
 -banner-ad
 -banner.swf?
 -fleshlight
@@ -300,10 +300,10 @@
 .asianewsnet.net/banner/
 .askjolene.com/endroll.php?
 .asp?coad
+.assetize.com/
 .assoc-amazon.
 .assoc-amazon.co.uk/
 .astrolabio.
-.assetize.com/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
@@ -336,8 +336,8 @@
 .beaconads.com/
 .begun.ru/
 .belboon.de/
-.bestofferdirect.
 .besthitsnow.com/
+.bestofferdirect.
 .bet365affiliates.
 .betclick.com/pub.aspx?
 .bfast.com/
@@ -453,6 +453,7 @@
 .com/ad/
 .com/ad2/
 .com/ad_
+.com/adds/
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -462,8 +463,6 @@
 .com/ads/
 .com/ads?
 .com/ads_
-.com/adx/
-.com/adds/
 .com/adsense/
 .com/adshow
 .com/adstream_
@@ -472,6 +471,7 @@
 .com/advert_
 .com/advt/
 .com/adx.js
+.com/adx/
 .com/affiliate/
 .com/awe.js
 .com/banners/
@@ -507,17 +507,17 @@
 .cpmadvisors.com/
 .cpmstar.com/view.aspx?
 .cpuim.com/
+.cpulaptop.com/
 .cpx24.com/
 .cpxinteractive.
-.cpulaptop.com/
 .crakmedia.com/sponsors/
 .crakmedia.com/www/
 .crispads.
-.cruiseworldinc.com/
 .crocoads.com/
 .crowdgravity.com/
-.cybermonitor.
+.cruiseworldinc.com/
 .cybergamer.com.au/xml/sponsors.
+.cybermonitor.
 .dailymotion.com/masscast/
 .datepersonalsfree.com/images/banner
 .dating-adv.com/
@@ -868,13 +868,13 @@
 .meubonus.com/
 .mezimedia.com/
 .mgnetwork.com/dealtaker/
+.mibebu.com/
 .microad.jp/
 .mirago.com/
 .mirago.de/
 .mirando.de/
 .mirror.co.uk/collections/gutters/
 .miva.com/
-.mibebu.com/
 .mixpo.com/
 .mixpod.com/ad/
 .mkhoj.com/
@@ -1017,10 +1017,10 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
-.pornturbo.com/tmarket.
 .pornoprinzen.com/banners_
 .pornprosnetwork.com/affiliates/
 .porntrack.com/
+.pornturbo.com/tmarket.
 .ppc-direct.
 .precisionclick.
 .predictad.
@@ -1264,6 +1264,7 @@
 .webmasterlounge.
 .webmasterplan.
 .wegcash.com/click/
+.wemfbox.ch/
 .wendise.com/tools/thumbs
 .weselectmodels.com/ZillionaireDate_Banner/
 .weselltraffic.
@@ -1275,7 +1276,6 @@
 .wildamaginations.com/mdm/
 .worldmag.com/images/media/
 .worldsex.com/c/
-.wemfbox.ch/
 .ws/banners/
 .wsex.com/mediaserver/
 .x-adservice.com/
@@ -1471,9 +1471,9 @@
 /ad-boxes-
 /ad-feedback.
 /ad-html
+/ad-identifier.
 /ad-iframe-
 /ad-indicator
-/ad-identifier.
 /ad-inject/
 /ad-layer
 /ad-leaderboard
@@ -1545,9 +1545,9 @@
 /ad_label
 /ad_leader.
 /ad_leader_
-/ad_legend_
 /ad_leaderboard
 /ad_left_
+/ad_legend_
 /ad_links/
 /ad_manage.
 /ad_media/
@@ -1580,8 +1580,8 @@
 /AdBlock.ashx?
 /adblock_
 /adbrite-
-/adbrite2.
 /adbrite/
+/adbrite2.
 /adbrite_
 /adCampaigns/
 /adcast_
@@ -1752,6 +1752,7 @@
 /ads_php/
 /ads_view.
 /ADSAdClient31.dll?
+/adsBannerJS.
 /adscript.php?
 /adscript_
 /adscript_
@@ -1785,7 +1786,6 @@
 /adshow/
 /AdsInclude.
 /adsjs.aspx?
-/adsBannerJS.
 /adslug-
 /adslug_
 /adsmanagement/
@@ -1807,15 +1807,15 @@
 /AdsTemplate/
 /adstop.
 /adstorage.
-/adsWideJS.
 /adStreamJSController.
 /adstubs/
 /adSwap.js
+/adSwap/
+/adsWideJS.
 /adsWrapper.js
 /adsx/www/
 /adsystem.
 /adsystem/
-/adSwap/
 /ads~adsize~
 /adtag.gif
 /adtag.htm?
@@ -1963,11 +1963,11 @@
 /behaviorAds/
 /belo_oas.
 /BelowNewsAd
+/bg_ads_
 /BigBoxAd.
 /bigtopl.swf
 /bilder/anzeige
 /bilder/promo
-/bg_ads_
 /bizbannerre
 /blog/ads/
 /blogad.
@@ -2329,6 +2329,7 @@
 /nsfw/sponsors/
 /oas/ad/
 /OAS/banners/
+/oas_ad_
 /OAS_Handler.
 /oas_home_
 /OASAdConnector
@@ -3025,8 +3026,8 @@ _iframe_ad_
 _leftx280_
 _minibanner
 _org_ad.
-_popovers_
 _platform_ads_
+_popovers_
 _reporting_ads.
 _right_ad.
 _rightad1.
@@ -3341,9 +3342,9 @@ http://banaad.
 http://banman.
 http://banner-clix.com/
 http://banner.atomicgamer.com/
+http://banner.itweb.co.za/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
-http://banner.itweb.co.za/
 http://banner1.
 http://banners.adultfriendfinder.
 http://banners.adventory.com/
@@ -3767,9 +3768,9 @@ http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
 http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
 http://yanks-hosted.com/
+http://yfrog.com/images/contests/
 http://yieldbuild.com/
 http://ytmnd.com/ugh
-http://yfrog.com/images/contests/
 http://yx0banners.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
