--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -113,6 +113,7 @@
 .clickintext.net/
 .clicksagent.
 .clickshift.com/
+.clickstream.co.za/
 .clicktale.net/
 .clicktracks.
 .clickzs.com/in.php?
@@ -465,8 +466,8 @@
 .play.com/sitetrak/
 .plentyoffish.com/tracking.
 .pointomatic.
-.popsample.
 .popeater.com/traffic/
+.popsample.
 .postrelease.com/
 .ppctracking.
 .predicta.com.br/
@@ -567,10 +568,10 @@
 .statsit.com/
 .statsrely.
 .stattrax.
-.steelhousemedia.com/
-.stormiq.com/
 .statun.com/
 .statuncore.com/
+.steelhousemedia.com/
+.stormiq.com/
 .sunios.de/c.php?
 .superstats.
 .swfstats.com/
