--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XjhNS7EkMDsmQR94UrZbrA
-# Updated: 16 Sep 2010
+# Checksum: f0/saU3f2dG05QRVKRr1yA
+# Updated: 17 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3330,7 +3330,7 @@ http://anonymouse.org/ad
 http://anzeigen
 http://api.opensourceadvertisementnetwork.info/
 http://appbodega.com/Promos/
-http://armorgames.com/misc/banners/
+http://armorgames.com/misc/
 http://asiafriendfinder.com/go/
 http://athena-ads.
 http://au2m8.com/
