--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: f0/saU3f2dG05QRVKRr1yA
+# Checksum: z0BzzO7BnOFOa1EGQJ0spw
 # Updated: 17 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2423,6 +2423,7 @@
 /pyv_watch_request_ad.
 /quad.php
 /QuadAdvert.
+/jqads.js
 /quigo_ad
 /radioAdEmbed.
 /radioAdEmbedGenre.
