--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: z0BzzO7BnOFOa1EGQJ0spw
-# Updated: 17 Sep 2010
+# Checksum: w77Me+YDr8qNmIYIZZBYgw
+# Updated: 18 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2052,6 +2052,7 @@
 /download/ad/
 /drawad.php?
 /droelf.kit/a/
+/dxd/ads/
 /dynamic/ads/
 /dynamic_banner_
 /DynamicAd?
@@ -2081,6 +2082,7 @@
 /feeds/jobroll/?
 /ffadult/featured/external/
 /file/ad.
+/flashAd.
 /files/adman/
 /flash/ads/
 /flash/maildating_
