make upsellit more specific

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: w77Me+YDr8qNmIYIZZBYgw
+# Checksum: mLXB+rNU/xvKmeDnhhppZw
 # Updated: 18 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1230,7 +1230,7 @@
 .uk/ads/
 .unicast.com/
 .uploadmirrors.com/banner.html
-.upsellit.com/
+.upsellit.com/custom/
 .urlcash.net/img/
 .usemax.de/
 .usenetpassport.com/
