--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mLXB+rNU/xvKmeDnhhppZw
+# Checksum: ItOfk+wrijUOpsLKiQoAhQ
 # Updated: 18 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3008,6 +3008,7 @@ _assets/ads/
 _banner/
 _blank_ads.
 _blogads.
+_bottom_ads_
 _box_ad_
 _cedexis.
 _custom_ad.
@@ -3023,6 +3024,7 @@ _google_ad.
 _google_video_ads
 _headerad.
 _headline_ad.
+_home_adrow-
 _hp_promo_
 _iad.html?
 _iframe_ad_
