--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ItOfk+wrijUOpsLKiQoAhQ
+# Checksum: 0neYORMhrkvzr0o1lHadjg
 # Updated: 18 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -718,6 +718,7 @@
 .imageshack.us/ym.php?
 .imagevenue.com/banner
 .imagevenue.com/streamate
+.imageshack.us/images/contests/
 .imedia.co.il/
 .img-vidiklub.com/demo.js
 .imgehost.
