--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -371,6 +371,7 @@
 .loomia.com/js/setcookie.
 .losstrack.com/
 .ltassrv.com/track/
+.lucidchart.com/analytics_events/
 .lycos.com/img/log/
 .lzjl.com/
 .m-pathy.com/
