--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0neYORMhrkvzr0o1lHadjg
-# Updated: 18 Sep 2010
+# Checksum: nQYO6DAQqEhvey27HJm+/Q
+# Updated: 19 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2098,6 +2098,7 @@
 /floaty_rotator
 /fncLargePlayer/brand/
 /footad-
+/FooterAd.
 /footer_ad_
 /footertextad
 /foresee-
