--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nQYO6DAQqEhvey27HJm+/Q
-# Updated: 19 Sep 2010
+# Checksum: HivKv1mNlEOuLZUI+yjmFQ
+# Updated: 20 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3020,6 +3020,7 @@ _engine_ads_
 _english/adv/
 _externalAd.
 _files/ad.
+_FloatingAd_
 _generic_ad.
 _geobanner.
 _google_ad.
