--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HivKv1mNlEOuLZUI+yjmFQ
+# Checksum: VANzHrhOO/B5oiT4BQ+79w
 # Updated: 20 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -280,6 +280,7 @@
 .allotraffic.
 .allyes.com/
 .alphagodaddy.com/
+.alternet.org/includes/givememygfp.
 .amateurseite.com/banner/
 .amazon.co.uk/widgets/
 .amazon.com/e/cm?t
