--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VANzHrhOO/B5oiT4BQ+79w
+# Checksum: cMX9Bf17Pnrs9wDso0i0PQ
 # Updated: 20 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -490,6 +490,7 @@
 .com/promoLoadDisplay?
 .com/reklama/
 .com/shareme.php?
+.com/trackads/
 .com/u/ads/
 .com/video-ad-
 .comclick.
@@ -716,10 +717,10 @@
 .iloveim.com/cAdv
 .imagefap.com/jscripts/awe.js
 .imagesatlantic.
+.imageshack.us/images/contests/
 .imageshack.us/ym.php?
 .imagevenue.com/banner
 .imagevenue.com/streamate
-.imageshack.us/images/contests/
 .imedia.co.il/
 .img-vidiklub.com/demo.js
 .imgehost.
@@ -2084,11 +2085,11 @@
 /feeds/jobroll/?
 /ffadult/featured/external/
 /file/ad.
-/flashAd.
 /files/adman/
 /flash/ads/
 /flash/maildating_
 /flash_advertising/
+/flashAd.
 /flashads/
 /flashpeelads/
 /flesh_banner
@@ -2099,8 +2100,8 @@
 /floaty_rotator
 /fncLargePlayer/brand/
 /footad-
-/FooterAd.
 /footer_ad_
+/FooterAd.
 /footertextad
 /foresee-
 /forums/ad/
@@ -2261,6 +2262,7 @@
 /j/ads.js
 /javascript/ads.
 /JavaScript/Ads/
+/jqads.js
 /js.ng/c
 /js.ng/p
 /js.ng/s
@@ -2428,7 +2430,6 @@
 /pyv_watch_request_ad.
 /quad.php
 /QuadAdvert.
-/jqads.js
 /quigo_ad
 /radioAdEmbed.
 /radioAdEmbedGenre.
