--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cMX9Bf17Pnrs9wDso0i0PQ
+# Checksum: tUHSyqNIJJBo8165qNAOIQ
 # Updated: 20 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -973,6 +973,7 @@
 .opinionbar.com/popups/
 .org/ad/
 .org/ads/
+.org/ads_
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
