--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: tUHSyqNIJJBo8165qNAOIQ
-# Updated: 20 Sep 2010
+# Checksum: XXIYBdWKs/TTxCVTkAhqdA
+# Updated: 21 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -712,6 +712,7 @@
 .idg.com.au/idg/fpromo/
 .idontlikeyouinthatway.com/mg
 .ign.com/advertisers/
+.info/ads/
 .illimitux.net/js/abp.js
 .ilovecheating.com/ads/
 .iloveim.com/cAdv
