--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -20,6 +20,8 @@
 .cz/js/ad/
 .cz/reklama/
 .cz/rs/get-iframe.php?
+.cz.net4ge.cz/
+.cz.net4ge.net/
 .espoluprace.cz/affiliate/
 .etargetnet.
 .hit.gemius.pl/
@@ -93,3 +95,4 @@ http://stats.turismo.cz/
 http://super.cz/static/flash/
 http://top-sk.mconet.biz//js/best_top2_js.php?
 http://toplist.cz/
+
