--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,8 +1,8 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XXIYBdWKs/TTxCVTkAhqdA
-# Updated: 21 Sep 2010
+# Checksum: 9MUk31ZsAGdIhQl8sM9pOg
+# Updated: 22 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
-# Contact:: mp3geek@gmail.com  http://fanboy.co.nz/adblock
+# Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
 &Advert_Id=
 ,160x600;
