--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -78,6 +78,7 @@ _publicidade_
 .jmonline.com.br/novo/banner_
 .jogolandia.com.br/banners/
 .jornaldigital.com/pub/
+.jornalagora.com.br/uploads/banners/
 .keyade.com/
 .laregion.es/imagenes/banners/
 .lavanguardia.es/flash/
