--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9MUk31ZsAGdIhQl8sM9pOg
+# Checksum: iy1d/H/BAy4AZ8qmps3MCA
 # Updated: 22 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3713,6 +3713,7 @@ http://traffic-supremacy.com/
 http://traffic.liveuniversenetwork.
 http://traffic4adult.com/generate.
 http://trafficcdn.liveuniversenetwork.com/
+http://tpnads.com/
 http://ts.richmedia.yahoo.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
