--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iy1d/H/BAy4AZ8qmps3MCA
+# Checksum: ltkIlaGbOzvkRG09cpfciA
 # Updated: 22 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -418,6 +418,7 @@
 .checkmystats.com.
 .checkoutfree.
 .chitika.
+.ciol.com/zedotags/files/
 .claxonmedia.
 .click.livedoor.com/
 .click4free.info/
@@ -712,7 +713,6 @@
 .idg.com.au/idg/fpromo/
 .idontlikeyouinthatway.com/mg
 .ign.com/advertisers/
-.info/ads/
 .illimitux.net/js/abp.js
 .ilovecheating.com/ads/
 .iloveim.com/cAdv
@@ -735,6 +735,7 @@
 .inetinteractive.
 .infinite-ads.
 .influads.com/
+.info/ads/
 .infolinks.com/action/
 .inforotor.net/rotor/
 .infoseek.co.jp/isweb/
@@ -3704,6 +3705,7 @@ http://toot.stileproject.com/
 http://topad
 http://topads.
 http://totem.porkolt.com/
+http://tpnads.com/
 http://track.bannerbridge.net/ad
 http://trackdataonline.biz/
 http://trackin.affiliserve.com/
@@ -3713,7 +3715,6 @@ http://traffic-supremacy.com/
 http://traffic.liveuniversenetwork.
 http://traffic4adult.com/generate.
 http://trafficcdn.liveuniversenetwork.com/
-http://tpnads.com/
 http://ts.richmedia.yahoo.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
