--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -62,6 +62,7 @@ _publicidade_
 .es/Cnt2/
 .es/imagenesDDN/banners/
 .es/traffic/?
+.expressomt.com.br/adminPortal/modBan/
 .finalsports.com.br/03/boo_box.
 .gazetaesportiva.net/js/banners/
 .globalasia.es/images/banners/
