--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ltkIlaGbOzvkRG09cpfciA
-# Updated: 22 Sep 2010
+# Checksum: 58e22ByTIhMzsTcasO/1Dg
+# Updated: 23 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3645,6 +3645,7 @@ http://reklama.
 http://resources.infolinks.
 http://richmedia.yimg.
 http://richmedia247.com/
+http://rok.com.com/rok-get
 http://roia.biz/ts/d/
 http://roia.biz/ts/v/
 http://rotabanner
