site: http://mail.yahoo.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 58e22ByTIhMzsTcasO/1Dg
+# Checksum: m7uLT6NrChVNrVS17ewfyA
 # Updated: 23 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1313,6 +1313,7 @@
 .yimg.com/ao/adv/
 .yimg.com/i/sg/adv/
 .yimg.jp/bdv/
+.yldmgrimg.net/
 .youjizz.com/inline_ads.
 .yourdatelink.com/IPFrame.aspx?
 .yourfuckbook.com/
