--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: m7uLT6NrChVNrVS17ewfyA
+# Checksum: jVw+C9qnFFXPjGaeFLJtMA
 # Updated: 23 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -256,6 +256,7 @@
 .adwires.com/
 .adwork.
 .adworldmedia.
+.adzerk.net/
 .adzmob.com/
 .adzs.com/zone_
 .af-market.
@@ -3646,9 +3647,9 @@ http://reklama.
 http://resources.infolinks.
 http://richmedia.yimg.
 http://richmedia247.com/
-http://rok.com.com/rok-get
 http://roia.biz/ts/d/
 http://roia.biz/ts/v/
+http://rok.com.com/rok-get
 http://rotabanner
 http://rs.mail.ru/
 http://rss.dtiserv.com/
