--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jVw+C9qnFFXPjGaeFLJtMA
+# Checksum: pZvKXSgibtYQxiJE3Dcz0A
 # Updated: 23 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -152,6 +152,7 @@
 .adjal.com/
 .adjug.com/
 .adjuggler.
+.adk2.com/
 .adland.ru/
 .adlandpro.
 .adlegend.
@@ -2111,6 +2112,7 @@
 /foresee-
 /forums/ad/
 /frame_ads_
+/frameads.
 /friendfinder_
 /gads.js
 /gafv_adapter.
