--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -207,6 +207,7 @@
 .destinationurl.
 .dgmsearchlab.com/
 .did-it.com/
+.diffusion-tracker.com/
 .dimestore.com/viapi?
 .directcounter.de/dc/
 .directnews.co.uk/feedtrack/
