--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pZvKXSgibtYQxiJE3Dcz0A
-# Updated: 23 Sep 2010
+# Checksum: XK7uN+c4IEvH0/OqRxTieA
+# Updated: 24 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -70,6 +70,7 @@
 -banner.swf?
 -fleshlight
 -gallery_ad/
+-HouseAd-
 -leaderboard-ad-
 -tebya-na-dosuge.com/
 -third-ad.
