--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XK7uN+c4IEvH0/OqRxTieA
-# Updated: 24 Sep 2010
+# Checksum: nNIE5zZBIJCnDPyfxAeZFQ
+# Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -591,6 +591,7 @@
 .eurobate.
 .euroclick.
 .euros4click.
+.entriq.net/ads/
 .eweek.com/images/stories/Marketing/
 .exaccess.ru/
 .exclusivepussy.com/tcgma/?
