--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5m5CTmyNWrL+3K3c/QsLmw
+# Checksum: PDF02j0es6gbstwNfCnXug
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1163,6 +1163,7 @@
 .swf?link1=http
 .swf?link=http
 .swiftco.net/banner/
+.swedishwire.com/images/banners/
 .sxc.hu/img/banner
 .symbiosting.com/LogicBuy/
 .tacoda.net/
