--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PDF02j0es6gbstwNfCnXug
+# Checksum: o7ewQzdsDIy70OjEG2NDZw
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -980,6 +980,7 @@
 .org/ad/
 .org/ads/
 .org/ads_
+.org/adx.
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
