--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: o7ewQzdsDIy70OjEG2NDZw
+# Checksum: o/zM1htkzVauWMZzUAx5ZQ
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1532,6 +1532,7 @@
 /ad2.htm
 /ad2games.com/
 /ad300x145.
+/ad300.htm
 /ad728x15
 /ad?sponsor
 /ad_350x
