--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: o/zM1htkzVauWMZzUAx5ZQ
+# Checksum: CgP5MHYxw1lWTfydp5Kx9g
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1694,6 +1694,7 @@
 /adreplace/
 /adrevenue/
 /adrevolver/
+/adriver.
 /adroot/
 /adrot.js
 /adrotate/
