--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CgP5MHYxw1lWTfydp5Kx9g
+# Checksum: F6UMk2pKOkC1bgJsxRQF4w
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3377,6 +3377,7 @@ http://banner1.
 http://banners.adultfriendfinder.
 http://banners.adventory.com/
 http://banners.alt.com/
+http://banners.blacksexmatch.com/
 http://banners.camdough.com/
 http://banners.cfspm.com.au/
 http://banners.facebookofsex.com/
