--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nNIE5zZBIJCnDPyfxAeZFQ
+# Checksum: 0K2TY/TFi56iQC3cVYCckQ
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1189,6 +1189,7 @@
 .timesonline.co.uk/date/profiles/
 .titsintops.com/intersitial/
 .tizernet.com/engine.php?
+.tsn.ca/images/silver/ae/superboard/
 .tkqlhce.
 .tkqlhce.
 .tldadserv.com/
