--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0K2TY/TFi56iQC3cVYCckQ
+# Checksum: 2JbdwLTdKUiw3Vk/vwBj0A
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2518,6 +2518,7 @@
 /showbanner
 /ShowFlashAd
 /side-ad.
+/side-ad-
 /sideadiframe.
 /SideAds/
 /sidebar_ad.
