--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2JbdwLTdKUiw3Vk/vwBj0A
+# Checksum: zSZqYYDFfNHd/LkpfIKlmw
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2055,6 +2055,7 @@
 /displayadbanner_
 /DisplayAdLeader.
 /displayads.
+/dmn-advert.
 /DNSads.
 /doors/ads/
 /doubleclick/iframe.htm?
