--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: F6UMk2pKOkC1bgJsxRQF4w
+# Checksum: AgAftMEokEmb2plZ+w6SSw
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -403,6 +403,7 @@
 .camelmedia.net/thumbs/
 .camsense.com/live/code.
 .camsitecash.com/
+.campusfood.com/content/dfp.
 .canoeklix.com/
 .capitatmarket.com/
 .captainad.
