--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zSZqYYDFfNHd/LkpfIKlmw
+# Checksum: 5m5CTmyNWrL+3K3c/QsLmw
 # Updated: 25 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1233,6 +1233,7 @@
 .tubemogul.com/adtags/
 .tumri.net/
 .turboimagehost.com/p.js?
+.tv/ads/
 .twistyscash.com/banner/
 .twofuckers.com/brazzers
 .ucoz.net/popup/
@@ -2033,6 +2034,7 @@
 /cpmbanner.
 /cpmrect.
 /cssjs/ads/
+/curlAd.
 /custom/ads
 /custom_ads/
 /data/Ads/
