--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: AgAftMEokEmb2plZ+w6SSw
-# Updated: 25 Sep 2010
+# Checksum: kxRq2ZMKGMFJVyu4feJgvA
+# Updated: 26 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1868,6 +1868,7 @@
 /advfiles/
 /adview.
 /advision
+/advolatility.
 /advmaker.ru/
 /AdvScript.
 /advscripts/
