--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kxRq2ZMKGMFJVyu4feJgvA
+# Checksum: cBI+zeWP2338JnMPCvzhIw
 # Updated: 26 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1582,6 +1582,7 @@
 /ad_show.js
 /ad_slide
 /ad_square_
+/ad_tab.
 /ad_tag_
 /ad_tags_
 /ad_top.
