--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,10 +1,11 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cBI+zeWP2338JnMPCvzhIw
+# Checksum: LoJ9U1rNGiif3rby+JkAzg
 # Updated: 26 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
 &Advert_Id=
+&clickTag=http
 ,160x600;
 ,468x60-
 ,468x60;
