--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LoJ9U1rNGiif3rby+JkAzg
+# Checksum: yN4q0a5mUVfMTzQJIdl+zA
 # Updated: 26 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1652,6 +1652,7 @@
 /adiframe.aspx?
 /adiframe/
 /AdifyAd.
+/AdInjector_
 /adim.html?ad
 /adimage
 /Adinator/
