--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -636,6 +636,7 @@
 .vbanalytics.
 .ventivmedia.
 .verticalacuity.com/vat/
+.videoplaza.com/proxy/tracker?
 .viglink.com/api/ping?
 .visiblemeasures.com/log?
 .visibli.com/
