--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: yN4q0a5mUVfMTzQJIdl+zA
+# Checksum: 1xmMl7iEswLgn6cc+Mha3A
 # Updated: 26 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -418,6 +418,7 @@
 .cb.cl/NewCBCL/images/cb_
 .cc-dt.com/link/tplimage?
 .cc-dt.com/pfx/
+.cdn.videoplaza.com/creatives/
 .celeb-ads.com/
 .checkm8.com/
 .checkmystats.com.
